Update Order model to cast status and payment_status to their respective enum classes, Add blade-ui-kit/blade-heroicons, codeat3/blade-evil-icons, and owenvoke/blade-fontawesome packages, Update Filament LatestOrders widget to use OrderStatus and PaymentStatus enums, Update MyOrderDetailPage to use status and payment_status enums for displaying labels.

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "blade-ui-kit/blade-heroicons": "^2.3",
+        "codeat3/blade-evil-icons": "^1.5",
         "epayco/epayco-php": "^1.6",
         "filament/filament": "3.2.57",
         "jantinnerezo/livewire-alert": "^3.0",
@@ -14,6 +16,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
+        "owenvoke/blade-fontawesome": "^2.6",
         "stripe/stripe-php": "^14.3"
     },
     "require-dev": {
