--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "jantinnerezo/livewire-alert": "^3.0",
         "laravel/breeze": "^2.0",
         "laravel/framework": "^11.0",
+        "laravel/pulse": "^1.2",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
